--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,12 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    margin: 0px
+    margin: 0px auto;
+    
 }
 
 hr {
-    margin: 2rem 0rem;
+    margin: 2rem;
 }
 
 /** spaces **/
@@ -27,7 +28,8 @@ hr {
 }
 
 .container-center {
-    max-width: 600px;
+    max-width: 900px;
+    width: 100%;
     margin: auto;
 }
 
@@ -41,22 +43,22 @@ hr {
 .link-primary {
     background-color: var(--primary-color);
     border-radius: 0.5rem;
-    color: white;
-    display: block;
+    color:#fff;
     max-width: 140px;
-    margin: 1rem 1rem 1rem 0rem;
+    padding: 0.6rem 1.2rem;
+    margin: 1rem auto;
+    border-radius: 2rem;
 }
 
 .link-secondary {
     color: var(--primary-color);
-    border-radius: 0.5rem;
+    border-radius: 2rem;
     border: 1px solid var(--primary-color);
-    display: block;
     max-width: 140px;
-    margin: 1rem 1rem 1rem 0rem;
+    margin: 1rem;
+    padding:0.6rem 1.2rem
 }
 
-/** look into BEM naming convention for CSS **/
 
 /** lists **/
 
@@ -105,7 +107,7 @@ hr {
 
 .hero .hero-img {
     max-width: 80%;
-    width: 350px;
+    width: 550px;
     display: block;
     margin: auto;
 }
@@ -124,6 +126,9 @@ hr {
 
 .section {
     padding: 2rem;
+    margin: 2rem 0;
+    border-radius: 1rem;
+    text-align: center;
 }
 
 .section h1 {
@@ -139,7 +144,7 @@ hr {
 
 .footer {
     background-color: var(--primary-color);
-    padding: 4rem 1rem;
+    padding: 2rem 1rem;
     text-align: center;
     color: white;
     border-top-right-radius: 1rem;
@@ -161,9 +166,37 @@ hr {
 /** projects **/
 .showcase-list {
     padding: 2rem;
+    border-radius: 1rem;
+    text-align: center;
+    margin: 3rem auto;
+}
+.showcase-list h1{
+    margin:0.5rem;
+}
+.showcase-list p{
+    padding-bottom: 1rem;
 }
 
 /** blogs **/
 .showcase-blog {
     padding-bottom: 6rem;
 }
+@media (max-width: 900px) {
+    body {
+      max-width: 95%;
+      width: 100%;
+    }
+  
+    .list-item-inline {
+      display: inline;
+      padding: 0rem;
+    }
+  
+    .container-center {
+      width: auto;
+    }
+  
+    .link-primary {
+      display: block;
+    }
+  }
