--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&display=swap');
+
 
 :root {
-    --primary-color: #7C3AED;
+    --primary-color: #ecd716;
     --off-white: #F3F4F6;
     --dark-gray: #6B7280;
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Merriweather', sans-serif;
     margin: 0px auto;
     
 }
